[tool.poetry]
name = "graphene-directives"
version = "0.4.1"
packages = [{include = "graphene_directives"}]
description = "Schema Directives implementation for graphene"
authors = ["Strollby <developers@strollby.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/strollby/graphene-directives"
repository = "https://github.com/strollby/graphene-directives"
documentation = "https://github.com/strollby/graphene-directives"
keywords = [
    "graphene-directives",
    "graphene",
    "graphql",
    "graphql-directives",
    "graphql-custom-directives",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
graphene = ">=3"

[tool.poetry.group.dev.dependencies]
bandit = "*"
pre-commit = "*"
pytest = "*"
pytest-dependency = "*"
ruff = "*"
nox = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Test Tools
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -s"
testpaths = [
    "tests/test_cache.py",
]


# Linters & Type Checkers
[tool.ruff.lint]
select = [
    #    "ALL"
    "E", # pycodestyle (E)
    "W", # pycodestyle (W)
    "F", # Pyflakes (F)
    "ANN", # flake8-annotations (ANN)
    "A", # flake8-builtins (A)
    "C4", # flake8-comprehensions (C4)
    "UP", # pyupgrade (UP)
    "Q", # flake8-quotes (Q)
    "RET", # flake8-return (RET)
    "SIM", # flake8-simplify (SIM)
    "ARG", # flake8-unused-arguments (ARG)
    "ISC", # flake8-implicit-str-concat (ISC)
]
ignore = [
    "ANN401", # Any
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN204", # Missing return type annotation for special method `__init__`
    "E501", #Line too long (99 > 88)
]

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = true
line-ending = "auto" # Like Black, automatically detect the appropriate line ending.


[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
]
